# ai-sim-emergent-agents

./: .gitignore  LICENSE  README.md  _fix_timing.py  analyze_logs.py  analyze_ra.py  beliefs.py  build_pdf.py  check_batch.py  civilization.py  combat.py  config.py  dashboard_bridge.py  dashboard_data.json  diplomacy.py  display.py  economy.py  era_export.txt  experiments.json  extract_stats.py  factions.py  fix_timing_final.py  fix_timing_output.py  generate_figures.py  history_20260225_003029.txt  inhabitants.py  manual_chronicle.txt  mythology.py  parse_logs.py  pyproject.toml  religion.py  requirements.txt  run_event_summary.csv  run_experiments.py  run_log.txt  run_output.txt  run_summary.txt  run_tail.txt  sim.py  sim_out.txt  (+3 more)
.github/: copilot-instructions.md
plugins/: __init__.py  example_plugin.py
samples/: history_20260225_024907.txt  run_20260223_215138.txt
src/thalren_vale/: __init__.py  __main__.py  beliefs.py  civilization.py  combat.py  config.py  dashboard.py  dashboard_bridge.py  dashboard_data.json  diplomacy.py  display.py  economy.py  factions.py  inhabitants.py  metrics.py  mythology.py  plugin_api.py  ra_tracker.py  religion.py  sim.py  technology.py  world.py
src/thalren_vale_simulation.egg-info/: PKG-INFO
